# waveshare_8ch_relay_examples

./: .gitmodules  README.md  channel_select  waveshare_8ch_relay_examples.sln
cpp/: CMakeLists.txt  channel_select.cpp  channel_select.in.hpp
cpp/cmake/: add_libgpiod.cmake  handle_dependencies.cmake
cpp/lib/: CMakeLists.txt
cpp/lib/include/wave8ch/: wave8ch.hpp.in
cpp/lib/src/: wave8ch.cpp
cpp/lib/test/: libtestmain.cpp
cpp/toolchains/: aarch64-toolchain.cmake  armhf-toolchain.cmake
csharp/: .gitignore  ChannelSelect.cs  README.md  csharp.csproj
shell_scripts/: channel_select
